--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <script type="text/javascript" charset="utf-8">
   $(document).ready(function () {
     // the "href" attribute of the modal trigger must specify the modal ID that wants to be triggered
-    $('.modal').modal();
+    // $('.modal').modal();
   });
 </script>
 
