--- a/index.html
+++ b/index.html
@@ -9,8 +9,14 @@
   <meta name='author' content='Andrei Kashcha'>
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css'>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flatpickr/2.0.5/flatpickr.min.css'>
   <link rel='shortcut icon' type='image/png' href='/static/favicon.png'/>
+  <style>
+
+    input#baustelle:disabled, select#select-time:disabled, select#select-pause:disabled {
+      background-color: rgba(0,0,0,0.04) !important;
+    }
+
+  </style>
 
   <title>Time log</title>
   <script type="text/javascript" charset="utf-8">
