--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel='shortcut icon' type='image/png' href='/static/favicon.png'/>
   <style>
 
-    input#baustelle:disabled, select#select-time:disabled, select#select-pause:disabled {
+    input#baustelle:disabled, select.select-time:disabled, select.select-pause:disabled {
       background-color: rgba(0,0,0,0.04) !important;
     }
 
