--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       background-color: rgba(0,0,0,0.04) !important;
     }
 
+    .title {
+      font-weight: 600;
+    }
+
   </style>
 
   <title>Time log</title>
