--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       font-weight: 600;
     }
 
+    .odd {
+      background-color: #f1f1f1 !important;
+    }
+
   </style>
 
   <title>Time log</title>
